--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^14.4.3",
     "bootstrap": "^5.1.3",
     "bootstrap-social": "^5.1.1",
+    "commit": "^0.0.4",
     "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
     "react": "^18.2.0",
